feat: css styles and gallery styles

--- a/app/index.html
+++ b/app/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-ca">
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>SeangoreshtBlog</title>
-		<meta name="description" content="">
+		<title>Sean Goresht</title>
+		<meta name="description" content="Front-end web developer and creator">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		{{content-for "head"}}
 
 		<link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
+		<link integrity="" rel="stylesheet" href="{{rootURL}}assets/reset.css">
+		<link integrity="" rel="stylesheet" href="{{rootURL}}assets/components/navigation.css">
+		<link integrity="" rel="stylesheet" href="{{rootURL}}assets/components/gallery.css">
 		<link integrity="" rel="stylesheet" href="{{rootURL}}assets/seangoresht-blog.css">
 
 		{{content-for "head-footer"}}
