feat: add grid feat: update home content

--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
 		<link integrity="" rel="stylesheet" href="{{rootURL}}assets/components/gallery.css">
 		<link integrity="" rel="stylesheet" href="{{rootURL}}assets/components/overlayed-image.css">
 		<link integrity="" rel="stylesheet" href="{{rootURL}}assets/components/page-section.css">
+		<link integrity="" rel="stylesheet" href="{{rootURL}}assets/components/grid.css">
 		<link integrity="" rel="stylesheet" href="{{rootURL}}assets/seangoresht-blog.css">
 
 		{{content-for "head-footer"}}
