feat: resume page

--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
 		<link integrity="" rel="stylesheet" href="{{rootURL}}assets/components/page-section.css">
 		<link integrity="" rel="stylesheet" href="{{rootURL}}assets/components/grid.css">
 		<link integrity="" rel="stylesheet" href="{{rootURL}}assets/components/project.css">
+		<link integrity="" rel="stylesheet" href="{{rootURL}}assets/components/resume.css">
 		<link integrity="" rel="stylesheet" href="{{rootURL}}assets/seangoresht-blog.css">
 
 		{{content-for "head-footer"}}
