chore: add utilities css

--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
 
 		<link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
 		<link integrity="" rel="stylesheet" href="{{rootURL}}assets/reset.css">
+		<link integrity="" rel="stylesheet" href="{{rootURL}}assets/utilities.css">
 		<link integrity="" rel="stylesheet" href="{{rootURL}}assets/components/navigation.css">
 		<link integrity="" rel="stylesheet" href="{{rootURL}}assets/components/gallery.css">
 		<link integrity="" rel="stylesheet" href="{{rootURL}}assets/components/overlayed-image.css">
@@ -17,6 +18,7 @@
 		<link integrity="" rel="stylesheet" href="{{rootURL}}assets/components/grid.css">
 		<link integrity="" rel="stylesheet" href="{{rootURL}}assets/components/project.css">
 		<link integrity="" rel="stylesheet" href="{{rootURL}}assets/components/resume.css">
+		<link integrity="" rel="stylesheet" href="{{rootURL}}assets/components/resume-work-history.css">
 		<link integrity="" rel="stylesheet" href="{{rootURL}}assets/seangoresht-blog.css">
 
 		{{content-for "head-footer"}}
