feat: styles for engagements

--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,7 @@
 		<link integrity="" rel="stylesheet" href="{{rootURL}}assets/components/project.css">
 		<link integrity="" rel="stylesheet" href="{{rootURL}}assets/components/resume.css">
 		<link integrity="" rel="stylesheet" href="{{rootURL}}assets/components/resume-work-history.css">
+		<link integrity="" rel="stylesheet" href="{{rootURL}}assets/components/resume-engagements.css">
 		<link integrity="" rel="stylesheet" href="{{rootURL}}assets/seangoresht-blog.css">
 
 		{{content-for "head-footer"}}
