feat(resume): print styles

--- a/app/index.html
+++ b/app/index.html
@@ -27,6 +27,7 @@
 		<link integrity="" rel="stylesheet" href="{{rootURL}}assets/components/resume.css">
 		<link integrity="" rel="stylesheet" href="{{rootURL}}assets/components/resume-work-history.css">
 		<link integrity="" rel="stylesheet" href="{{rootURL}}assets/components/resume-engagements.css">
+		<link integrity="" rel="stylesheet" media="print" href="{{rootURL}}assets/print.css">
 		<link integrity="" rel="stylesheet" href="{{rootURL}}assets/seangoresht-blog.css">
 
 		{{content-for "head-footer"}}
