refactor: type to own css file fix: bullet lists not indented

--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
 		<link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
 		<link integrity="" rel="stylesheet" href="{{rootURL}}assets/reset.css">
 		<link integrity="" rel="stylesheet" href="{{rootURL}}assets/utilities.css">
+		<link integrity="" rel="stylesheet" href="{{rootURL}}assets/type.css">
 		<link integrity="" rel="stylesheet" href="{{rootURL}}assets/components/navigation.css">
 		<link integrity="" rel="stylesheet" href="{{rootURL}}assets/components/gallery.css">
 		<link integrity="" rel="stylesheet" href="{{rootURL}}assets/components/overlayed-image.css">
