doc: rename project seangoresht-ember-website

--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
 		<link integrity="" rel="stylesheet" href="{{rootURL}}assets/components/resume-work-history.css">
 		<link integrity="" rel="stylesheet" href="{{rootURL}}assets/components/resume-engagements.css">
 		<link integrity="" rel="stylesheet" media="print" href="{{rootURL}}assets/print.css">
-		<link integrity="" rel="stylesheet" href="{{rootURL}}assets/seangoresht-blog.css">
+		<link integrity="" rel="stylesheet" href="{{rootURL}}assets/seangoresht-ember-website.css">
 
 		{{content-for "head-footer"}}
 	</head>
@@ -37,7 +37,7 @@
 		{{content-for "body"}}
 
 		<script src="{{rootURL}}assets/vendor.js"></script>
-		<script src="{{rootURL}}assets/seangoresht-blog.js"></script>
+		<script src="{{rootURL}}assets/seangoresht-ember-website.js"></script>
 
 		{{content-for "body-footer"}}
 	</body>
