--- a/tests/index.html
+++ b/tests/index.html
@@ -11,7 +11,7 @@
 		{{content-for "test-head"}}
 
 		<link href="{{rootURL}}assets/vendor.css" rel="stylesheet">
-		<link href="{{rootURL}}assets/seangoresht-blog.css" rel="stylesheet">
+		<link href="{{rootURL}}assets/seangoresht-ember-website.css" rel="stylesheet">
 		<link href="{{rootURL}}assets/test-support.css" rel="stylesheet">
 
 		{{content-for "head-footer"}}
@@ -31,7 +31,7 @@
 		<script data-embroider-ignore integrity="" src="/testem.js"></script>
 		<script src="{{rootURL}}assets/vendor.js"></script>
 		<script src="{{rootURL}}assets/test-support.js"></script>
-		<script src="{{rootURL}}assets/seangoresht-blog.js"></script>
+		<script src="{{rootURL}}assets/seangoresht-ember-website.js"></script>
 		<script src="{{rootURL}}assets/tests.js"></script>
 
 		{{content-for "body-footer"}}
